fix(modals): Relocated action buttons to the bottom on small screens

--- a/src/components/modal/Modal.scss
+++ b/src/components/modal/Modal.scss
@@ -153,6 +153,15 @@
         .modal-close-button {
             right: 10px;
         }
+
+        .modal-actions {
+            position: fixed;
+            right: 0;
+            bottom: 0;
+            width: 100%;
+            padding: 10px 16px;
+            background-color: #fff;
+        }
     }
 
     .modal-dialog-container {
